--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@basis-theory-ai/react": "*",
+    "@basis-theory-ai/react": "1.0.1-beta.7",
     "jose": "^5.0.0",
     "next": "^13.5.0",
     "react": "^18.2.0",
