--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@basis-theory-ai/react": "*",
+    "@basis-theory-ai/react": "1.0.1-beta.8",
     "jose": "^5.0.0",
     "next": "^13.5.0",
     "react": "^18.2.0",
